# web-app-template

./: .dockerignore  .gitignore  AGENTS.md  ATDD_PLAN.md  CLAUDE.md  Cargo.toml  PLAN.md  PLAN_ecommerce.md  PLAN_quote_details.md  PLAN_use_cases_return_output.md  README.md
.claude/: settings.json
.claude/commands/: atdd.md  check.md  test.md
.github/workflows/: pipelines.yml
ai/evals/: Cargo.toml  README.md  evals.toml
apps/web/: Cargo.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/assets/: app.css  app.ts
apps/web/src/: config.rs  http.rs  main.rs  routes.rs  view_models.rs
apps/web/src/ordering/: adapters.rs  mod.rs  presenters.rs  routes.rs  view_models.rs
apps/web/src/presenters/: mod.rs
apps/web/static/: app.css  app.js
apps/web/templates/: base.html  cart.html  catalog.html  error.html  index.html  invoice.html  landing.html  quote.html  quote_detail.html  quotes.html  signin.html  signup.html
apps/web/templates/ordering/: base.html  cart.html  invoice.html  quote.html  sign_in.html  sign_up.html
apps/web/templates/ordering/partials/: cart_items.html  quote_preview.html  sign_in_form.html  sign_up_form.html
apps/web/templates/partials/: add_to_cart_success.html  cart_count.html  cart_items.html
core/entities/: Cargo.toml
core/ports/: Cargo.toml
core/use_cases/: Cargo.toml
datastore/: Cargo.toml
datastore/src/: lib.rs  postgres.rs
infra/: Dockerfile.web  docker-compose.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
references/: example_invoice.csv  new_order_form.csv
(+43 files in other folders)
