[package]
name = "web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
askama = "0.12"
axum-extra = { version = "0.9", features = ["cookie"] }
core_entities = { path = "../../core/entities" }
core_ports = { path = "../../core/ports" }
core_use_cases = { path = "../../core/use_cases" }
datastore = { path = "../../datastore" }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
